#add_executable(unit_test gaussian_bump.cpp)
#
#DEAL_II_SETUP_TARGET(unit_test)
#target_link_libraries(unit_test eulerflow_lib)
#
#set(TEST_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR})#/test_output)
#add_test(
#  NAME GaussianBump 
#  COMMAND unit_test
#  WORKING_DIRECTORY ${TEST_OUTPUT_DIR}#/linear_advection
#)
