# Integration tests
add_subdirectory(advection_implicit)
add_subdirectory(diffusion_implicit)
add_subdirectory(convection_diffusion_implicit)
add_subdirectory(advection_vector_implicit)
add_subdirectory(burgers_inviscid_implicit)
add_subdirectory(burgers_split_stability)
add_subdirectory(euler_split_inviscid_taylor_green_vortex)
add_subdirectory(advection_explicit_periodic)
add_subdirectory(convection_diffusion_explicit_periodic)
add_subdirectory(euler_integration)
add_subdirectory(grid_refinement)
add_subdirectory(euler_bump_optimization)
add_subdirectory(euler_naca_optimization)
add_subdirectory(navier_stokes_integration)
add_subdirectory(optimization_inverse_manufactured)
add_subdirectory(1d_shock)
add_subdirectory(reduced_order)
add_subdirectory(flow_solver)
