# Integration tests
add_subdirectory(advection_implicit)
add_subdirectory(diffusion_implicit)
add_subdirectory(convection_diffusion_implicit)
add_subdirectory(advection_vector_implicit)
add_subdirectory(burgers_inviscid_implicit)
add_subdirectory(burgers_split_stability)
add_subdirectory(euler_split_inviscid_taylor_green_vortex)
add_subdirectory(advection_explicit_periodic)
add_subdirectory(convection_diffusion_explicit_periodic)
add_subdirectory(euler_integration)
add_subdirectory(grid_refinement)
add_subdirectory(euler_bump_optimization)
add_subdirectory(euler_naca_optimization)
add_subdirectory(navier_stokes_integration)
add_subdirectory(optimization_inverse_manufactured)
add_subdirectory(1d_shock)
add_subdirectory(reduced_order)
add_subdirectory(hyper_reduction)
add_subdirectory(flow_solver)
add_subdirectory(taylor_green_vortex_integration)
add_subdirectory(low_storage_runge_kutta_check)
add_subdirectory(time_refinement_study)
add_subdirectory(euler_entropy_conservation)
add_subdirectory(decaying_homogeneous_isotropic_turbulence)
add_subdirectory(isentropic_vortex_integration)
add_subdirectory(kelvin_helmholtz_instability)
add_subdirectory(TGV_scaling)
add_subdirectory(relaxation_runge_kutta_checks)
add_subdirectory(advection_limiter)
add_subdirectory(burgers_limiter)
add_subdirectory(sod_shock_tube)
add_subdirectory(low_density)
add_subdirectory(leblanc_shock_tube)
add_subdirectory(shu_osher_problem)
add_subdirectory(double_mach_reflection)
add_subdirectory(shock_diffraction)
add_subdirectory(astrophysical_jet)
add_subdirectory(svsw)
