# Unit tests
add_subdirectory(numerical_flux)
add_subdirectory(regression)
add_subdirectory(euler_unit_test)
add_subdirectory(grid)
add_subdirectory(functional_derivatives)
add_subdirectory(sensitivities)
add_subdirectory(msh_output)
add_subdirectory(navier_stokes_unit_test)
add_subdirectory(optimization)
add_subdirectory(operator_tests)
add_subdirectory(flow_variable_tests)
