# Unit tests
if(${NUMBER_OF_SPECIES} EQUAL 1)
add_subdirectory(numerical_flux)
add_subdirectory(regression)
add_subdirectory(euler_unit_test)
add_subdirectory(functional_derivatives)
add_subdirectory(sensitivities)
add_subdirectory(navier_stokes_unit_test)
add_subdirectory(flow_variable_tests)
add_subdirectory(tke_spectra_calculation_fix)
elseif(${NUMBER_OF_SPECIES} EQUAL 2 OR ${NUMBER_OF_SPECIES} EQUAL 3)
add_subdirectory(real_gas_unit_test)
endif()

add_subdirectory(grid)
add_subdirectory(msh_output)
add_subdirectory(optimization)
add_subdirectory(operator_tests)
add_subdirectory(linear_solver)
